@startuml Invernadero

entity Empresa{
    idEmpresa
    --
    Nombre
    Direccion
    Correo
    Web
}

entity Invernadero {
    idInvernadero
    --
    Nombre
    Direccion
    Comuna
    Longitud
    Latitud
}

entity Planta {
    IdPlanta
    --
    FechaPlantacion
    TemporadaCultivo
    Fecha
    idEspecie
}

entity Especie{
    idEspecie
    --
    Nombre
}

entity Sensor {
    sensor_id
    --
    planta_id
    sector_id
}

entity MedicionSensor {
    sensor_id
    tiempo_medicion
    Temperatura
    Humedad
    Luminosidad
}

entity Sector {
    idSector
    --
    Nombre
}

entity Actuador {
    idActuador
    --
    TemperaturaObjetivo
    HumedadObjetivo
}

entity Tratamiento {
    IdTratamiento
    --
    CantidadAplicada
    FechaTratamiento
    idTipoTratamiento
}

entity TipoTratamiento{
    idTipoTratamiento
    --
    Nombre
    UnidadMedida
}

entity Trabajador {
    idTrabajador
    --
    Turno
}

Planta -- Sensor
Planta - Tratamiento
Tratamiento - TipoTratamiento
Especie - Planta
Sensor - MedicionSensor
Sensor -- Sector
Sector-Invernadero
Actuador - Sector
Invernadero - Trabajador

@enduml